alignment fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: auto;
+}
+
+.alignD{
+  width: 600px;
 }
 /* AppComponent's private CSS styles */
 h1 {
